bet init