@@ -1,17 +1,17 @@
 package com.otsc.backend.controllers;
 
+import com.otsc.backend.dtos.BetDto;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Arrays;
 import java.util.List;
 
 @RestController
-public class MessagesController {
+public class BetController {
 
-    @GetMapping("/messages")
-    public ResponseEntity<List<String>> messages() {
-        return ResponseEntity.ok(Arrays.asList("first", "second"));
+    @GetMapping("/bet")
+    public ResponseEntity<List<BetDto>> bets() {
+        return ResponseEntity.ok(List.of(new BetDto()));
     }
 }
